# concept-attention-cpp

./: CMakeLists.txt  README.md  TASKS.md
examples/: train_shakespeare.cpp
include/mini_torch/: attention.h  autograd.h  data.h  dropout.h  embedding.h  functional.h  layer_norm.h  linear.h  loss.h  model.h  module.h  optim.h  tensor.h  tokenizer.h
src/: attention.cpp  autograd.cpp  baseline_main.cpp  dropout.cpp  embedding.cpp  genesis_model.cpp  layer_norm.cpp  linear.cpp  loss.cpp  main.cpp  model.cpp  optim.cpp  tensor.cpp  tokenizer.cpp  train_models.cpp
tests/: all_tests.cpp  attention_tests.cpp  autograd_tests.cpp  data_tests.cpp  dropout_tests.cpp  embedding_tests.cpp  layer_norm_tests.cpp  linear_tests.cpp  loss_tests.cpp  model_tests.cpp  optim_tests.cpp  overfit_digits_tests.cpp  pytorch_parity_tests.cpp  tensor_tests.cpp  tokenizer_tests.cpp  train_run_tests.cpp
